Fix cut off version text

--- a/css/style.css
+++ b/css/style.css
@@ -1700,7 +1700,7 @@ div.openInEditorButton i{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    max-width: 100%;
+    max-width: 120%;
 }
 .fa-select::after {
    font-family: FontAwesome;
